k8s/apps/internal/headscale/local-only-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-auth
  namespace: headscale
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # gethomepage.dev/href: "https://headscale.oplabs.us"
    # gethomepage.dev/enabled: "true"
    # gethomepage.dev/name: "JP Designs Dashboard"
    # gethomepage.dev/description: "Manage JP Designs projects"
    # gethomepage.dev/group: "JP Designs"
    # gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.oplabs.us`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        []
        # - name: ws-header
        #   namespace: headscale
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: local-ip-list
        #   namespace: traefik
        # - name: oauth-forward-auth
        #   namespace: traefik
        # - name: oauth-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: headscale-auth
          port: 8080
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-admin
  namespace: headscale
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # gethomepage.dev/href: "https://headscale.oplabs.us"
    # gethomepage.dev/enabled: "true"
    # gethomepage.dev/name: "JP Designs Dashboard"
    # gethomepage.dev/description: "Manage JP Designs projects"
    # gethomepage.dev/group: "JP Designs"
    # gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.oplabs.us`) && PathPrefix(`/web`)
      kind: Rule
      middlewares:
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: local-ip-list
        #   namespace: traefik
        # - name: oauth-forward-auth
        #   namespace: traefik
        # - name: oauth-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: headscale-gui
          port: 8080
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert

---
# Authenticated requests to /oauth2/ will be forwarded to the oauth-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy-path
  namespace: headscale
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
    - match: Host(`headscale.oplabs.us`) && PathPrefix(`/oauth2/`) # Replace with your domain
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
      # middlewares:
      #   - name: crowdsec-bouncer
      #     namespace: traefik
  # Uncomment and configure for HTTPS
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
---
# add externalName service for oauth-proxy
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: headscale
spec:
  type: ExternalName
  externalName: oauth-proxy.ms-sso.svc.cluster.local
  ports:
    - name: http
      port: 4180
      targetPort: 4180
